--- a/institute/templates/base.html
+++ b/institute/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        {% block title %}Sha'af{% endblock %}
+        {% block title %}{% endblock %}
     </title>
     {% block styles %}{% endblock %}
   </head>
