--- a/institute/main/templates/main/index.html
+++ b/institute/main/templates/main/index.html
@@ -10,13 +10,11 @@
     <nav id="nav">
         <h1 id="title"> Sha'af Language </h1>
         <div class="nav-links">
-            <ul class="nav-links" data-in="fadeInDown" data-out="fadeOutUp">
-                <li class="nav-links"> <a href="http://" class="nav-links"> courses </a></li>
-                <li class="nav-links"> <a href="http://" class="nav-links"> books </a></li>
-                <li class="nav-links"> <a href="http://" class="nav-links"> about us </a></li>
-                <li class="nav-links"> <a href="http://" class="nav-links"> contact us </a></li>
-                <li class="nav-links"> <a href="http://" class="nav-links"> sign in </a></li>
-            </ul>
+                <a href="http://" class="nav-links"> courses </a>
+                <a href="http://" class="nav-links"> books </a>
+                <a href="http://" class="nav-links"> about us </a>
+                <a href="http://" class="nav-links"> contact us </a>
+                <a href="http://" class="nav-links"> sign in </a>
         </div>
     </nav>
 </header>
