--- a/institute/main/templates/main/index.html
+++ b/institute/main/templates/main/index.html
@@ -10,11 +10,11 @@
     <nav id="nav">
         <h1 id="title"> Sha'af Language </h1>
         <div class="nav-links">
-                <a href="http://" class="nav-links"> courses </a>
-                <a href="http://" class="nav-links"> books </a>
-                <a href="http://" class="nav-links"> about us </a>
-                <a href="http://" class="nav-links"> contact us </a>
-                <a href="http://" class="nav-links"> sign in </a>
+                <a href="" class="nav-links"> courses </a>
+                <a href="" class="nav-links"> books </a>
+                <a href="" class="nav-links"> about us </a>
+                <a href="" class="nav-links"> contact us </a>
+                <a href="" class="nav-links"> sign in </a>
         </div>
     </nav>
 </header>
