--- a/institute/main/templates/main/index.html
+++ b/institute/main/templates/main/index.html
@@ -4,10 +4,10 @@
 {% block title %}Sha'af{% endblock %}
 
 {% block styles %}
-    <link rel="stylesheet" href={% static 'main/css/fontawesome.css' %}>
-    <link rel="stylesheet" href={% static 'main/css/templatemo-grad-school.css' %}>
-    <link rel="stylesheet" href={% static 'main/css/owl.css' %}>
-    <link rel="stylesheet" href={% static 'main/css/lightbox.css' %}>
+    <link rel="stylesheet" href="{% static 'main/css/fontawesome.css' %}">
+    <link rel="stylesheet" href="{% static 'main/css/templatemo-grad-school.css' %}">
+    <link rel="stylesheet" href="{% static 'main/css/owl.css' %}">
+    <link rel="stylesheet" href="{% static 'main/css/lightbox.css' %}">
 {% endblock %}
 
 {% block header %}
@@ -38,7 +38,7 @@
       <!-- ***** Main Banner Area Start ***** -->
   <section class="section main-banner" id="top" data-section="section1">
       <video autoplay muted loop id="bg-video">
-          <source src="assets/images/course-video.mp4" type="video/mp4" />
+          <source src="main/images/course-video.mp4" type="video/mp4" />
       </video>
 
       <div class="video-overlay header-text">
@@ -122,7 +122,7 @@
               <article id='tabs-1'>
                 <div class="row">
                   <div class="col-md-6">
-                    <img src="assets/images/choose-us-image-01.png" alt="">
+                    <img src="main/images/choose-us-image-01.png" alt="">
                   </div>
                   <div class="col-md-6">
                     <h4>Best Education</h4>
@@ -133,7 +133,7 @@
               <article id='tabs-2'>
                 <div class="row">
                   <div class="col-md-6">
-                    <img src="assets/images/choose-us-image-02.png" alt="">
+                    <img src="main/images/choose-us-image-02.png" alt="">
                   </div>
                   <div class="col-md-6">
                     <h4>Top Level</h4>
@@ -145,7 +145,7 @@
               <article id='tabs-3'>
                 <div class="row">
                   <div class="col-md-6">
-                    <img src="assets/images/choose-us-image-03.png" alt="">
+                    <img src="main/images/choose-us-image-03.png" alt="">
                   </div>
                   <div class="col-md-6">
                     <h4>Quality Meeting</h4>
@@ -238,12 +238,12 @@
         </div>
         <div class="owl-carousel owl-theme">
           <div class="item">
-            <img src="assets/images/courses-01.jpg" alt="Course #1">
+            <img src="main/images/courses-01.jpg" alt="Course #1">
             <div class="down-content">
               <h4>Digital Marketing</h4>
               <p>You can get free images and videos for your websites by visiting Unsplash, Pixabay, and Pexels.</p>
               <div class="author-image">
-                <img src="assets/images/author-01.png" alt="Author 1">
+                <img src="main/images/author-01.png" alt="Author 1">
               </div>
               <div class="text-button-pay">
                 <a href="#">Pay <i class="fa fa-angle-double-right"></i></a>
@@ -251,12 +251,12 @@
             </div>
           </div>
           <div class="item">
-            <img src="assets/images/courses-02.jpg" alt="Course #2">
+            <img src="main/images/courses-02.jpg" alt="Course #2">
             <div class="down-content">
               <h4>Business World</h4>
               <p>Quisque cursus augue ut velit dictum, quis volutpat enim blandit. Maecenas a lectus ac ipsum porta.</p>
               <div class="author-image">
-                <img src="assets/images/author-02.png" alt="Author 2">
+                <img src="main/images/author-02.png" alt="Author 2">
               </div>
               <div class="text-button-free">
                 <a href="#">Free <i class="fa fa-angle-double-right"></i></a>
@@ -264,12 +264,12 @@
             </div>
           </div>
           <div class="item">
-            <img src="assets/images/courses-03.jpg" alt="Course #3">
+            <img src="main/images/courses-03.jpg" alt="Course #3">
             <div class="down-content">
               <h4>Media Technology</h4>
               <p>Pellentesque ultricies diam magna, auctor cursus lectus pretium nec. Maecenas finibus lobortis enim.</p>
               <div class="author-image">
-                <img src="assets/images/author-03.png" alt="Author 3">
+                <img src="main/images/author-03.png" alt="Author 3">
               </div>
               <div class="text-button-pay">
                 <a href="#">Pay <i class="fa fa-angle-double-right"></i></a>
@@ -277,12 +277,12 @@
             </div>
           </div>
           <div class="item">
-            <img src="assets/images/courses-04.jpg" alt="Course #4">
+            <img src="main/images/courses-04.jpg" alt="Course #4">
             <div class="down-content">
               <h4>Communications</h4>
               <p>Download free images and videos for your websites by visiting Unsplash, Pixabay, and Pexels.</p>
               <div class="author-image">
-                <img src="assets/images/author-04.png" alt="Author 4">
+                <img src="main/images/author-04.png" alt="Author 4">
               </div>
               <div class="text-button-free">
                 <a href="#">Free <i class="fa fa-angle-double-right"></i></a>
@@ -290,12 +290,12 @@
             </div>
           </div>
           <div class="item">
-            <img src="assets/images/courses-05.jpg" alt="">
+            <img src="main/images/courses-05.jpg" alt="">
             <div class="down-content">
               <h4>Business Ethics</h4>
               <p>Pellentesque ultricies diam magna, auctor cursus lectus pretium nec. Maecenas finibus lobortis enim.</p>
               <div class="author-image">
-                <img src="assets/images/author-05.png" alt="">
+                <img src="main/images/author-05.png" alt="">
               </div>
               <div class="text-button-pay">
                 <a href="#">Pay <i class="fa fa-angle-double-right"></i></a>
@@ -303,12 +303,12 @@
             </div>
           </div>
           <div class="item">
-            <img src="assets/images/courses-01.jpg" alt="">
+            <img src="main/images/courses-01.jpg" alt="">
             <div class="down-content">
               <h4>Photography</h4>
               <p>Quisque cursus augue ut velit dictum, quis volutpat enim blandit. Maecenas a lectus ac ipsum porta.</p>
               <div class="author-image">
-                <img src="assets/images/author-01.png" alt="">
+                <img src="main/images/author-01.png" alt="">
               </div>
               <div class="text-button-free">
                 <a href="#">Free <i class="fa fa-angle-double-right"></i></a>
@@ -316,12 +316,12 @@
             </div>
           </div>
           <div class="item">
-            <img src="assets/images/courses-02.jpg" alt="">
+            <img src="main/images/courses-02.jpg" alt="">
             <div class="down-content">
               <h4>Web Development</h4>
               <p>Pellentesque ultricies diam magna, auctor cursus lectus pretium nec. Maecenas finibus lobortis enim.</p>
               <div class="author-image">
-                <img src="assets/images/author-02.png" alt="">
+                <img src="main/images/author-02.png" alt="">
               </div>
               <div class="text-button-free">
                 <a href="#">Free <i class="fa fa-angle-double-right"></i></a>
@@ -329,12 +329,12 @@
             </div>
           </div>
           <div class="item">
-            <img src="assets/images/courses-03.jpg" alt="">
+            <img src="main/images/courses-03.jpg" alt="">
             <div class="down-content">
               <h4>Learn HTML CSS</h4>
               <p>You can get free images and videos for your websites by visiting Unsplash, Pixabay, and Pexels.</p>
               <div class="author-image">
-                <img src="assets/images/author-03.png" alt="">
+                <img src="main/images/author-03.png" alt="">
               </div>
               <div class="text-button-pay">
                 <a href="#">Pay <i class="fa fa-angle-double-right"></i></a>
@@ -342,12 +342,12 @@
             </div>
           </div>
           <div class="item">
-            <img src="assets/images/courses-04.jpg" alt="">
+            <img src="main/images/courses-04.jpg" alt="">
             <div class="down-content">
               <h4>Social Media</h4>
               <p>Pellentesque ultricies diam magna, auctor cursus lectus pretium nec. Maecenas finibus lobortis enim.</p>
               <div class="author-image">
-                <img src="assets/images/author-04.png" alt="">
+                <img src="main/images/author-04.png" alt="">
               </div>
               <div class="text-button-pay">
                 <a href="#">Pay <i class="fa fa-angle-double-right"></i></a>
@@ -355,12 +355,12 @@
             </div>
           </div>
           <div class="item">
-            <img src="assets/images/courses-05.jpg" alt="">
+            <img src="main/images/courses-05.jpg" alt="">
             <div class="down-content">
               <h4>Digital Arts</h4>
               <p>Quisque cursus augue ut velit dictum, quis volutpat enim blandit. Maecenas a lectus ac ipsum porta.</p>
               <div class="author-image">
-                <img src="assets/images/author-05.png" alt="">
+                <img src="main/images/author-05.png" alt="">
               </div>
               <div class="text-button-free">
                 <a href="#">Free <i class="fa fa-angle-double-right"></i></a>
@@ -368,12 +368,12 @@
             </div>
           </div>
           <div class="item">
-            <img src="assets/images/courses-01.jpg" alt="">
+            <img src="main/images/courses-01.jpg" alt="">
             <div class="down-content">
               <h4>Media Streaming</h4>
               <p>Pellentesque ultricies diam magna, auctor cursus lectus pretium nec. Maecenas finibus lobortis enim.</p>
               <div class="author-image">
-                <img src="assets/images/author-01.png" alt="">
+                <img src="main/images/author-01.png" alt="">
               </div>
               <div class="text-button-pay">
                 <a href="#">Pay <i class="fa fa-angle-double-right"></i></a>
@@ -404,7 +404,7 @@
               <h4>Power HTML Template</h4>
             </div>
             <figure>
-              <a href="https://www.youtube.com/watch?v=r9LtOG6pNUw" class="play"><img src="assets/images/main-thumb.png"></a>
+              <a href="https://www.youtube.com/watch?v=r9LtOG6pNUw" class="play"><img src="main/images/main-thumb.png"></a>
             </figure>
           </article>
         </div>
@@ -459,5 +459,19 @@
       </div>
     </div>
   </section>
+{% endblock %}
+
+{% block footer %}
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <p><i class="fa fa-copyright"></i> Copyright 2020 by Grad School
+
+           | Design: <a href="https://templatemo.com" rel="sponsored" target="_parent">TemplateMo</a></p>
+        </div>
+      </div>
+    </div>
+  </footer>
 {% endblock %}
 
