--- a/institute/templates/base.html
+++ b/institute/templates/base.html
@@ -4,20 +4,20 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        {% block title %}{% endblock %}
-    </title>
+    <title> {% block title %}{% endblock %} </title>
     {% block styles %}{% endblock %}
   </head>
   <body>
     <header>
-        {% block header %}{% endblock %}
+        <nav>
+            <h1>Sha'af Language</h1>
+            {% block header %}{% endblock %}
+        </nav>
     </header>
+
     {% block content %}{% endblock %}
 
-    <footer>
-        {% block footer %}{% endblock %}
-    </footer>
+    <footer> {% block footer %}{% endblock %} </footer>
     {% block scripts %}{% endblock %}
   </body>
 </html>
